fix: tx info alignment (#153)

--- a/src/assets/style/components/_successBlock.scss
+++ b/src/assets/style/components/_successBlock.scss
@@ -4,6 +4,7 @@
   }
 
   .infoBlockItem {
+    text-align: center;
     &.smaller {
       .headline {
         font-size: 16px;
